# felib

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile.am  README.md  appveyor.yml  configure.ac  license.md  references.md
include/: .#element_base.h  .clang-format  element_base.h  element_base.tcc  hexahedron_element.h  hexahedron_quadrature.h  hexahedron_quadrature.tcc  hexahedron_shape.h  hexahedron_shape.tcc  hexahedron_shapefn.h  hexahedron_shapefn.tcc  line_element.h  line_quadrature.h  line_quadrature.tcc  line_shape.h  line_shape.ipp  line_shape.tcc  line_shapefn.h  line_shapefn.tcc  node_base.h  quadrature_base.h  quadrilateral_element.h  quadrilateral_quadrature.h  quadrilateral_quadrature.tcc  quadrilateral_shape.h  quadrilateral_shape.tcc  quadrilateral_shapefn.h  quadrilateral_shapefn.tcc  shapefn_base.h  shapefun_base.h  tetrahedron_element.h  tetrahedron_quadrature.h  tetrahedron_quadrature.tcc  triangle_element.h  triangle_quadrature.h  triangle_quadrature.tcc  triangle_shape.h  triangle_shape.tcc  triangle_shapefn.h  triangle_shapefn.tcc  (+1 more)
include/base/: node_base.h
include/elements/1d_line/: line_element.h  line_shapefn.h  line_shapefn.tcc
include/elements/2d_quadrilateral/: quadrilateral_element.h  quadrilateral_quadrature.tcc  quadrilateral_shapefn.h
include/elements/2d_triangle/: triangle_element.h  triangle_quadrature.tcc  triangle_shapefn.h
include/elements/3d_hexahedron/: hexahedron_element.h  hexahedron_shapefn.h  hexahedron_shapefn.tcc
include/elements/3d_tetrahedron/: tetrahedron_element.h
include/shapeFun/: lineShape.h  lineShape.ipp  shapefun_base.h
include/shape_fun/: line_shape.h  line_shape.ipp  line_shape.tcc  shapefun_base.h
include/test/: CMakeCache.txt  allTests  cmake_install.cmake  node_base_test.cpp
m4/: eigen.m4
src/: main.cc
tests/: CMakeLists.txt  hexahedron_quadrature_test.cc  hexahedron_shapefn_test.cc  line_quadrature_test.cc  line_shapefn_test.cc  node_base_test.cc  node_base_test.cpp  quadrilateral_quadrature_test.cc  quadrilateral_shapefn_test.cc  tetrahedron_quadrature_test.cc  triangle_quadrature_test.cc  triangle_shapefn_test.cc
tests/elements/1d_line/: line_shapefn_test.cc
tests/elements/2d_quadrilateral/: quadrilateral_quadrature_test.cc
tests/elements/3d_hexahedron/: hexahedron_shapefn_test.cc
tests/elements/hexahedron/: hexahedron_quadrature_test.cc  hexahedron_shapefn_test.cc
tests/elements/line/: line_shapefn_test.cc
tests/hexahedron/: hexahedron_shapefn_test.cc
tests/line/: line_quadrature_test.cc
